cores, fontes, espaçamentos inseridos no arquivo de configuração

--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,9 @@
 @tailwind components;
 
 @tailwind utilities;
+
+@layer components {
+  .heading-h3 {
+    @apply font-prata text-36 mt-7 mb-3 text-white;
+  }
+}
