--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -522,6 +522,14 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.logo {
+  font-family: Prata, serif;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .heading-h3 {
   margin-top: 1.75rem;
   margin-bottom: 0.75rem;
@@ -610,13 +618,13 @@ video {
        column-gap: 1.25rem;
 }
 
-.gap-y-4 {
-  row-gap: 1rem;
-}
-
 .gap-x-9 {
   -moz-column-gap: 2.25rem;
        column-gap: 2.25rem;
+}
+
+.gap-y-4 {
+  row-gap: 1rem;
 }
 
 .bg-black {
@@ -669,11 +677,6 @@ video {
   line-height: 2.5rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .leading-12 {
   line-height: 50px;
 }
@@ -700,6 +703,10 @@ video {
   .md\:mx-auto {
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .md\:w-full {
+    width: 100%;
   }
 
   .md\:max-w-455 {
@@ -762,6 +769,10 @@ video {
 
   .lg\:max-w-675 {
     max-width: 675px;
+  }
+
+  .lg\:max-w-full {
+    max-width: 100%;
   }
 
   .lg\:flex-1 {
